deployment.yaml
# https://github.com/GoogleCloudPlatform/python-docs-samples/blob/master/endpoints/kubernetes/k8s-grpc-bookstore.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-hello-service
  labels:
    app: grpc-hello
    release: grpc-hello
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: grpc
  selector:
    app: grpc-hello
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-hello
        release: grpc-hello
    spec:
      volumes:
        - name: devision-token-issuer
          secret:
            secretName: devision-token-issuer
      imagePullSecrets:
        - name: registry-secret
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port=9000",
          "--http2_port=9001",
          "--backend=grpc://127.0.0.1:50051",
          "--service=hello.endpoints.devision-io.cloud.goog",
          "--service_account_key=/etc/nginx/creds/devision-token-issuer.json",
          "--rollout_strategy=managed",
        ]
        ports:
          - containerPort: 9000
          - containerPort: 9001
        volumeMounts:
          - mountPath: /etc/nginx/creds
            name: devision-token-issuer
            readOnly: true
      - name: python-grpc-hello
        image: apisgarpun/apis:apiproxyt--v1-latest
        ports:
          - containerPort: 50051
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpc-hello-service
  namespace: apis
  labels:
    app: grpc-hello
    release: grpc-hello
spec:
  rules:
  - host: hello.apis.kb.1ad.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: grpc-hello-service
          servicePort: 9000
