ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpc-hello-ingress
  namespace: grpc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/grpc-services: "grpc-hello"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  tls:
  - hosts:
    - books.grpc.kb2.1ad.ru
  rules:
  - host: grpc.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grpc-hello
          servicePort: 80
